# cavsiopy

./: .README.md.kate-swp  .readthedocs.yaml  README.md  cavsiopy_installation_guide.txt  pyproject.toml  requirements.txt  setup.py
cavsiopy/: Direction_Analysis.py  orientation_plotter.py  use_rotation_matrices.py
cavsiopy/src/: orientation_plotter.py
docs/: .buildinfo  genindex.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/x/: index.doctree
docs/_build/doctrees/x/source/: index.doctree
docs/_build/html/: index.html  objects.inv  py-modindex.html  search.html
docs/_build/html/_static/: documentation_options.js
docs/_build/html/x/: index.html
docs/_build/html/x/source/: index.html
docs/source/: conf.py  index.rst
docs/x/source/: conf.py
extras/: pyproject.toml_old  setup.py
previous/: pyproject.toml_0.9.0  pyproject.toml_0.9.2  pyproject.toml_0.9.3  requirements.txt  setup.py_0.9.0  setup.py_0.9.3
src/: Direction_Analysis.py  __init__.py  main.py
src/cavsiopy/: Direction_Analysis.py  ephemeris_importer.py  misc.py  use_rotation_matrices.py
